# riscv_mindgrove

./: Cargo.toml  README.md  main.rs
led_blink/: Cargo.toml  memory.x
led_blink/.cargo/: config.toml
led_blink/src/: main.rs
riscv-hal/: Cargo.toml
riscv-hal/src/: gpio.rs  i2c.rs  lib.rs  spi.rs
riscv_pac/: Cargo.toml  README.md  Secure_IoT.svd  device.x
riscv_pac/src/: aes.rs  clint0.rs  gpio.rs  gptimer0.rs  i2c0.rs  itrace.rs  itrace_ram.rs  lib.rs  pinmux0.rs  plic0.rs  pwm0.rs  quadspi0.rs  rsa.rs  sha256.rs  spi0.rs  uart0.rs  wdt0.rs
riscv_pac/src/aes/: aes_ctrl.rs  aes_input.rs  aes_iv.rs  aes_key.rs  aes_next_blk.rs  aes_output.rs  aes_status.rs
riscv_pac/src/clint0/: msip.rs  time.rs  timecmp.rs
riscv_pac/src/gpio/: gpio_clear.rs  gpio_data.rs  gpio_direction.rs  gpio_intr.rs  gpio_set.rs  gpio_toggle.rs
riscv_pac/src/gptimer0/: capture_inp.rs  clock_ctrl.rs  count.rs  ctrl.rs  duty_cycle.rs  period.rs  rptd_count.rs
riscv_pac/src/i2c0/: ctrl.rs  s0.rs  s01.rs  s2.rs  s3.rs  scl.rs  status.rs  time.rs
riscv_pac/src/itrace/: comp1_ctrl.rs  comp1_pmatch_high.rs  comp1_pmatch_low.rs  comp1_smatch_low.rs  comp2_ctrl.rs  comp3_ctrl.rs  ctrl.rs  fiter_ctrl.rs
riscv_pac/src/itrace_ram/: ctrl.rs  data.rs  impl_.rs  limit_high.rs  limit_low.rs  rp_high.rs  rp_low.rs  start_high.rs  start_low.rs  wp_high.rs  wp_low.rs
riscv_pac/src/pinmux0/: mux0.rs  mux1.rs  mux2.rs  mux3.rs  mux4.rs  mux5.rs  mux6.rs  mux7.rs
riscv_pac/src/plic0/: intr_complete.rs  intr_en_0_32.rs  intr_en_33_63.rs  pending_0_32.rs  pending_33_63.rs  priority0.rs  (+64 more)
(+42 files in other folders)
