[package]
name = "led_blink"
version = "0.1.0"
edition = "2024"

[dependencies]
riscv = { version = "0.12.1" }
riscv-rt = { version = "0.13.0", features = ["single-hart"] }
riscv-hal= { path = "../riscv-hal"}
panic-halt = "1.0.0" 
riscv-pac = { path = "../riscv_pac"}

[profile]
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"


